[project]
name = "kayoko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "dotenv>=0.9.9",
  "faster-whisper>=1.1.1",
  "numpy==1.26.4",
  "openai>=1.63.2",
  "requests>=2.32.3",
  "scipy>=1.15.2",
  "setuptools>=75.8.0",
  "sounddevice>=0.5.1",
  "style-bert-vits2>=2.5.0",
  "torch==2.5.0+cu121",
  "torchvision==0.20.0+cu121",
]

[tool.uv.workspace]
members = ["test"]

[dependency-groups]
dev = ["ruff>=0.9.7"]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
